Fixed the layout of the sidebar and chat, if the name of a contact or a message is too long

--- a/src/app/components/account-list-item/account-list-item.component.scss
+++ b/src/app/components/account-list-item/account-list-item.component.scss
@@ -6,6 +6,7 @@ a {
 
     .user-photo {
         flex: 0 1 40px;
+        min-width: 40px;
         height: 40px;
         border-radius: 50% 50%;
         background-repeat: no-repeat;
@@ -17,12 +18,15 @@ a {
         display: flex;
         padding: 0 0 0 10px;
         align-items: center;
+        overflow: hidden;
 
         .user-name {
             flex: 1 1 auto;
             display: flex;
             flex-direction: column;
             justify-content: center;
+            white-space: nowrap;
+            overflow: hidden;
         }
 
         .unread-count {
@@ -43,9 +47,10 @@ a {
         }
 
         .social-icon {
-            width: 20px;
             display: flex;
             justify-content: flex-end;
+            width: 20px;
+            margin: 0 0 0 10px;
         }
     }
 }
