--- a/src/app/components/chat/chat.component.scss
+++ b/src/app/components/chat/chat.component.scss
@@ -3,6 +3,7 @@
 :host {
     display: flex;
     flex: 1 1 auto;
+    overflow: hidden;
 
     @include media-breakpoint-down(md) {
         display: none;
@@ -16,6 +17,7 @@
         display: flex;
         flex-direction: column;
         flex: 1 1 auto;
+        overflow: hidden;
 
         .messages-container {
             flex: 1 1 auto;
