--- a/src/app/components/message/message.component.scss
+++ b/src/app/components/message/message.component.scss
@@ -15,7 +15,7 @@
     .talk-bubble {
         display: inline-block;
         position: relative;
-        max-width: 45%;
+        max-width: 80%;
         background-color: lightyellow;
 
         &.btm-left{
